--- a/app/globals.css
+++ b/app/globals.css
@@ -4,15 +4,25 @@
 
 html,
 body,
-:root{
+:root {
   height: 100%;
 }
-.categories::-webkit-scrollbar{
-  @apply w-1 h-1
+.categories::-webkit-scrollbar {
+  @apply w-1 h-1;
 }
-.categories::-webkit-scrollbar-thumb{
-  @apply bg-neutral-500 rounded-xl
+.categories::-webkit-scrollbar-thumb {
+  @apply bg-neutral-500 rounded-xl;
 }
-.leaflet-bottom,.leaflet-control,.leaflet-pane,.leaflet-top{
+.leaflet-bottom,
+.leaflet-control,
+.leaflet-pane,
+.leaflet-top {
   z-index: 0 !important;
+}
+.rdrMonth {
+  width: 100% !important;
+}
+.rdrCalendarWrapper {
+  width: 100% !important;
+  font-size: 16px !important;
 }
